@@ -1,6 +1,6 @@
 #ifndef VERSION_HPP
 #define VERSION_HPP
-#define PRODUCTVER     0,4,0,130
-#define STRPRODUCTVER  "0,4,0,130"
-#define STRPRODUCTDATE "2012-01-26"
+#define PRODUCTVER     0,4,0,131
+#define STRPRODUCTVER  "0,4,0,131"
+#define STRPRODUCTDATE "2012-01-31"
 #endif // VERSION_HPP
